--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "homepage": "https://RohanBoddh.github.io/TextUtils-React.",
+  "homepage": "https://RohanBoddh.github.io/TextUtils-React",
+
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
